@@ -2,12 +2,13 @@ package com.laz.knowledge.thirtyeight;
 
 
 import java.security.MessageDigest;
-import sun.misc.BASE64Decoder;  
-import sun.misc.BASE64Encoder;  
+
 import javax.crypto.KeyGenerator;
 import javax.crypto.Mac;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
+
+import org.apache.commons.codec.binary.Base64;
 
 public abstract class Coder {
 	public static final String KEY_SHA = "SHA";
@@ -35,7 +36,7 @@ public abstract class Coder {
 	 * @throws Exception
 	 */
 	public static byte[] decryptBASE64(String key) throws Exception {
-		return (new BASE64Decoder()).decodeBuffer(key);
+		return Base64.decodeBase64(key);
 	}
 
 	/**
@@ -46,7 +47,7 @@ public abstract class Coder {
 	 * @throws Exception
 	 */
 	public static String encryptBASE64(byte[] key) throws Exception {
-		return (new BASE64Encoder()).encodeBuffer(key);
+		return Base64.encodeBase64String(key);
 	}
 
 	/**
